bug squashing

--- a/css/styles.css
+++ b/css/styles.css
@@ -382,8 +382,9 @@ footer {
 
 .contact-send-button {
   background-color: #1d1d36;
-  border: none;
+  /* border: 1px solid white; */
   color: var(--background-main-color);
+  background-color: #423e51;
   border-radius: 5px;
   min-height: 25px;
   padding-top: 8px;
@@ -391,6 +392,14 @@ footer {
   margin-top: 4px;
   max-width: 300px;
   cursor: pointer;
+  font-weight: 700;
+  letter-spacing: 0.07rem;
+}
+
+.contact-send-button:hover {
+  color: gray;
+  background-color: var(--background-main-color);
+  transition: all 0.5s ease-in-out;
 }
 
 input,
